<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_baseline_filter_list_24"
        android:orderInCategory="1"
        android:title="@string/all"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_all"
                android:orderInCategory="1"
                android:title="@string/all_task"
                app:showAsAction="withText" />
            <item
                android:id="@+id/action_active"
                android:orderInCategory="1"
                android:title="@string/active"
                app:showAsAction="withText" />
            <item
                android:id="@+id/action_completed"
                android:orderInCategory="1"
                android:title="@string/completed"
                app:showAsAction="withText" />
        </menu>
    </item>

    <item
        android:id="@+id/action_clear_completed"
        android:orderInCategory="2"
        android:title="@string/clear_completed"
        app:showAsAction="withText" />
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="2"
        android:title="@string/refresh"
        app:showAsAction="withText" />
</menu>